--- a/idr0083-sars-cov2.ipynb
+++ b/idr0083-sars-cov2.ipynb
@@ -20,11 +20,14 @@
    "outputs": [],
    "source": [
     "import dask.array as da\n",
-    "from IPython.display import display\n",
+    "import imageio\n",
+    "from IPython.display import display, Image\n",
     "import json\n",
     "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
     "import requests\n",
     "import s3fs\n",
+    "from skimage.transform import resize\n",
     "import zarr"
    ]
   },
@@ -1921,8 +1924,10 @@
     "zattrs = json.loads(s3.get_mapper(imageurl).get('.zattrs'))\n",
     "resolutions = [d['path'] for d in zattrs['multiscales'][0]['datasets']]\n",
     "\n",
+    "darrays = {}\n",
     "for resolution in resolutions:\n",
     "    a = da_from_image(imageurl, resolution)\n",
+    "    darrays[resolution] = a\n",
     "    display(a)"
    ]
   },
@@ -1988,7 +1993,7 @@
    ],
    "source": [
     "r = resolutions[-3]\n",
-    "a0 = da_from_image(imageurl, r)[0, 0, 0, :, :]\n",
+    "a0 = darrays[r][0, 0, 0, :, :]\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(a0, cmap='gray')\n",
     "plt.title(r);"
@@ -2096,7 +2101,7 @@
     "dx = int(a0.shape[1] / 2)\n",
     "\n",
     "for r in resolutions[-4:0:-1]:\n",
-    "    a = da_from_image(imageurl, r)[0, 0, 0, :, :]\n",
+    "    a = darrays[r][0, 0, 0, :, :]\n",
     "    # Change the following line to zoom into a different location\n",
     "    cy, cx = int(a.shape[0] / 2), int(a.shape[1] / 2)\n",
     "    region = a[cy-dy:cy+dy, cx-dx:cx+dx]\n",
@@ -2104,6 +2109,335 @@
     "    plt.imshow(a[cy-dy:cy+dy, cx-dx:cx+dx], cmap='gray')\n",
     "    plt.title(r)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have an overview of the resolutions we can create a smoothly zooming animation by taking taking regions at different resolutions and resizing them.\n",
+    "\n",
+    "Since each resolution is a different size it is easier to use relative coordinates `[0,1]` to reference all locations and convert these into `x,y` indices for each resolution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zoom so we show 92% of the image each time, centred\n",
+    "# If you want to zoom off-centre you will need to pad the output image\n",
+    "z = 0.92\n",
+    "cx, cy = 0.5, 0.5\n",
+    "\n",
+    "# Show the whole of the starting resolution\n",
+    "dx, dy = 0.5, 0.5\n",
+    "rs = resolutions[:-2]\n",
+    "r = rs.pop()\n",
+    "a = darrays[r][0, 0, 0, :, :]\n",
+    "h0, w0 = a.shape\n",
+    "h1, w1 = h0, w0\n",
+    "im = a\n",
+    "\n",
+    "ims = [im]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading 7\n",
+      "Loading 6\n",
+      "Loading 5\n",
+      "Loading 4\n",
+      "Loading 3\n",
+      "Loading 2\n",
+      "Loading 1\n",
+      "Loading 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    dx, dy = dx * z, dy * z\n",
+    "    x0, y0 = (cx - dx) * w1, (cy - dy) * h1\n",
+    "    x1, y1 = (cx + dx) * w1, (cy + dy) * h1\n",
+    "\n",
+    "    if np.ceil(x1 - x0) < w0 or np.ceil(y1 - y0) < h0:\n",
+    "        # Need to go to the next resolution\n",
+    "        try:\n",
+    "            r = rs.pop()\n",
+    "        except IndexError:\n",
+    "            break\n",
+    "        print(f'Loading {r}')\n",
+    "        a = darrays[r][0, 0, 0, :, :]\n",
+    "        h1, w1 = a.shape\n",
+    "        x0, y0 = (cx - dx) * w1, (cy - dy) * h1\n",
+    "        x1, y1 = (cx + dx) * w1, (cy + dy) * h1\n",
+    "\n",
+    "    x0, y0 = int(x0), int(y0)\n",
+    "    x1, y1 = int(x1), int(y1)\n",
+    "    im = resize(a[y0:y1, x0:x1], (h0, w0), preserve_range=True)\n",
+    "    ims.append(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<td>\n",
+       "<table>\n",
+       "  <thead>\n",
+       "    <tr><td> </td><th> Array </th><th> Chunk </th></tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr><th> Bytes </th><td> 110.04 MB </td> <td> 1.64 MB </td></tr>\n",
+       "    <tr><th> Shape </th><td> (364, 564, 67) </td> <td> (364, 564, 1) </td></tr>\n",
+       "    <tr><th> Count </th><td> 137 Tasks </td><td> 67 Chunks </td></tr>\n",
+       "    <tr><th> Type </th><td> float64 </td><td> numpy.ndarray </td></tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</td>\n",
+       "<td>\n",
+       "<svg width=\"145\" height=\"215\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"55\" y2=\"45\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"10\" y1=\"120\" x2=\"55\" y2=\"165\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"10\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"55\" y1=\"45\" x2=\"55\" y2=\"165\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"10.000000,0.000000 55.556946,45.556946 55.556946,165.556946 10.000000,120.000000\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"49\" y2=\"0\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"55\" y1=\"45\" x2=\"95\" y2=\"45\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"55\" y2=\"45\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"56\" y2=\"45\" />\n",
+       "  <line x1=\"11\" y1=\"0\" x2=\"56\" y2=\"45\" />\n",
+       "  <line x1=\"11\" y1=\"0\" x2=\"57\" y2=\"45\" />\n",
+       "  <line x1=\"12\" y1=\"0\" x2=\"57\" y2=\"45\" />\n",
+       "  <line x1=\"12\" y1=\"0\" x2=\"58\" y2=\"45\" />\n",
+       "  <line x1=\"13\" y1=\"0\" x2=\"59\" y2=\"45\" />\n",
+       "  <line x1=\"14\" y1=\"0\" x2=\"59\" y2=\"45\" />\n",
+       "  <line x1=\"14\" y1=\"0\" x2=\"60\" y2=\"45\" />\n",
+       "  <line x1=\"15\" y1=\"0\" x2=\"60\" y2=\"45\" />\n",
+       "  <line x1=\"15\" y1=\"0\" x2=\"61\" y2=\"45\" />\n",
+       "  <line x1=\"16\" y1=\"0\" x2=\"62\" y2=\"45\" />\n",
+       "  <line x1=\"17\" y1=\"0\" x2=\"62\" y2=\"45\" />\n",
+       "  <line x1=\"17\" y1=\"0\" x2=\"63\" y2=\"45\" />\n",
+       "  <line x1=\"18\" y1=\"0\" x2=\"63\" y2=\"45\" />\n",
+       "  <line x1=\"18\" y1=\"0\" x2=\"64\" y2=\"45\" />\n",
+       "  <line x1=\"19\" y1=\"0\" x2=\"64\" y2=\"45\" />\n",
+       "  <line x1=\"20\" y1=\"0\" x2=\"65\" y2=\"45\" />\n",
+       "  <line x1=\"20\" y1=\"0\" x2=\"66\" y2=\"45\" />\n",
+       "  <line x1=\"21\" y1=\"0\" x2=\"66\" y2=\"45\" />\n",
+       "  <line x1=\"21\" y1=\"0\" x2=\"67\" y2=\"45\" />\n",
+       "  <line x1=\"22\" y1=\"0\" x2=\"67\" y2=\"45\" />\n",
+       "  <line x1=\"22\" y1=\"0\" x2=\"68\" y2=\"45\" />\n",
+       "  <line x1=\"23\" y1=\"0\" x2=\"69\" y2=\"45\" />\n",
+       "  <line x1=\"24\" y1=\"0\" x2=\"69\" y2=\"45\" />\n",
+       "  <line x1=\"24\" y1=\"0\" x2=\"70\" y2=\"45\" />\n",
+       "  <line x1=\"25\" y1=\"0\" x2=\"70\" y2=\"45\" />\n",
+       "  <line x1=\"25\" y1=\"0\" x2=\"71\" y2=\"45\" />\n",
+       "  <line x1=\"26\" y1=\"0\" x2=\"72\" y2=\"45\" />\n",
+       "  <line x1=\"27\" y1=\"0\" x2=\"72\" y2=\"45\" />\n",
+       "  <line x1=\"27\" y1=\"0\" x2=\"73\" y2=\"45\" />\n",
+       "  <line x1=\"28\" y1=\"0\" x2=\"73\" y2=\"45\" />\n",
+       "  <line x1=\"28\" y1=\"0\" x2=\"74\" y2=\"45\" />\n",
+       "  <line x1=\"29\" y1=\"0\" x2=\"75\" y2=\"45\" />\n",
+       "  <line x1=\"30\" y1=\"0\" x2=\"75\" y2=\"45\" />\n",
+       "  <line x1=\"30\" y1=\"0\" x2=\"76\" y2=\"45\" />\n",
+       "  <line x1=\"31\" y1=\"0\" x2=\"76\" y2=\"45\" />\n",
+       "  <line x1=\"31\" y1=\"0\" x2=\"77\" y2=\"45\" />\n",
+       "  <line x1=\"32\" y1=\"0\" x2=\"77\" y2=\"45\" />\n",
+       "  <line x1=\"33\" y1=\"0\" x2=\"78\" y2=\"45\" />\n",
+       "  <line x1=\"33\" y1=\"0\" x2=\"79\" y2=\"45\" />\n",
+       "  <line x1=\"34\" y1=\"0\" x2=\"79\" y2=\"45\" />\n",
+       "  <line x1=\"34\" y1=\"0\" x2=\"80\" y2=\"45\" />\n",
+       "  <line x1=\"35\" y1=\"0\" x2=\"80\" y2=\"45\" />\n",
+       "  <line x1=\"35\" y1=\"0\" x2=\"81\" y2=\"45\" />\n",
+       "  <line x1=\"36\" y1=\"0\" x2=\"82\" y2=\"45\" />\n",
+       "  <line x1=\"37\" y1=\"0\" x2=\"82\" y2=\"45\" />\n",
+       "  <line x1=\"37\" y1=\"0\" x2=\"83\" y2=\"45\" />\n",
+       "  <line x1=\"38\" y1=\"0\" x2=\"83\" y2=\"45\" />\n",
+       "  <line x1=\"38\" y1=\"0\" x2=\"84\" y2=\"45\" />\n",
+       "  <line x1=\"39\" y1=\"0\" x2=\"85\" y2=\"45\" />\n",
+       "  <line x1=\"40\" y1=\"0\" x2=\"85\" y2=\"45\" />\n",
+       "  <line x1=\"40\" y1=\"0\" x2=\"86\" y2=\"45\" />\n",
+       "  <line x1=\"41\" y1=\"0\" x2=\"86\" y2=\"45\" />\n",
+       "  <line x1=\"41\" y1=\"0\" x2=\"87\" y2=\"45\" />\n",
+       "  <line x1=\"42\" y1=\"0\" x2=\"88\" y2=\"45\" />\n",
+       "  <line x1=\"43\" y1=\"0\" x2=\"88\" y2=\"45\" />\n",
+       "  <line x1=\"43\" y1=\"0\" x2=\"89\" y2=\"45\" />\n",
+       "  <line x1=\"44\" y1=\"0\" x2=\"89\" y2=\"45\" />\n",
+       "  <line x1=\"44\" y1=\"0\" x2=\"90\" y2=\"45\" />\n",
+       "  <line x1=\"45\" y1=\"0\" x2=\"90\" y2=\"45\" />\n",
+       "  <line x1=\"45\" y1=\"0\" x2=\"91\" y2=\"45\" />\n",
+       "  <line x1=\"46\" y1=\"0\" x2=\"92\" y2=\"45\" />\n",
+       "  <line x1=\"47\" y1=\"0\" x2=\"92\" y2=\"45\" />\n",
+       "  <line x1=\"47\" y1=\"0\" x2=\"93\" y2=\"45\" />\n",
+       "  <line x1=\"48\" y1=\"0\" x2=\"93\" y2=\"45\" />\n",
+       "  <line x1=\"48\" y1=\"0\" x2=\"94\" y2=\"45\" />\n",
+       "  <line x1=\"49\" y1=\"0\" x2=\"95\" y2=\"45\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"10.000000,0.000000 49.528117,0.000000 95.085064,45.556946 55.556946,45.556946\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"55\" y1=\"45\" x2=\"95\" y2=\"45\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"55\" y1=\"165\" x2=\"95\" y2=\"165\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"55\" y1=\"45\" x2=\"55\" y2=\"165\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"56\" y1=\"45\" x2=\"56\" y2=\"165\" />\n",
+       "  <line x1=\"56\" y1=\"45\" x2=\"56\" y2=\"165\" />\n",
+       "  <line x1=\"57\" y1=\"45\" x2=\"57\" y2=\"165\" />\n",
+       "  <line x1=\"57\" y1=\"45\" x2=\"57\" y2=\"165\" />\n",
+       "  <line x1=\"58\" y1=\"45\" x2=\"58\" y2=\"165\" />\n",
+       "  <line x1=\"59\" y1=\"45\" x2=\"59\" y2=\"165\" />\n",
+       "  <line x1=\"59\" y1=\"45\" x2=\"59\" y2=\"165\" />\n",
+       "  <line x1=\"60\" y1=\"45\" x2=\"60\" y2=\"165\" />\n",
+       "  <line x1=\"60\" y1=\"45\" x2=\"60\" y2=\"165\" />\n",
+       "  <line x1=\"61\" y1=\"45\" x2=\"61\" y2=\"165\" />\n",
+       "  <line x1=\"62\" y1=\"45\" x2=\"62\" y2=\"165\" />\n",
+       "  <line x1=\"62\" y1=\"45\" x2=\"62\" y2=\"165\" />\n",
+       "  <line x1=\"63\" y1=\"45\" x2=\"63\" y2=\"165\" />\n",
+       "  <line x1=\"63\" y1=\"45\" x2=\"63\" y2=\"165\" />\n",
+       "  <line x1=\"64\" y1=\"45\" x2=\"64\" y2=\"165\" />\n",
+       "  <line x1=\"64\" y1=\"45\" x2=\"64\" y2=\"165\" />\n",
+       "  <line x1=\"65\" y1=\"45\" x2=\"65\" y2=\"165\" />\n",
+       "  <line x1=\"66\" y1=\"45\" x2=\"66\" y2=\"165\" />\n",
+       "  <line x1=\"66\" y1=\"45\" x2=\"66\" y2=\"165\" />\n",
+       "  <line x1=\"67\" y1=\"45\" x2=\"67\" y2=\"165\" />\n",
+       "  <line x1=\"67\" y1=\"45\" x2=\"67\" y2=\"165\" />\n",
+       "  <line x1=\"68\" y1=\"45\" x2=\"68\" y2=\"165\" />\n",
+       "  <line x1=\"69\" y1=\"45\" x2=\"69\" y2=\"165\" />\n",
+       "  <line x1=\"69\" y1=\"45\" x2=\"69\" y2=\"165\" />\n",
+       "  <line x1=\"70\" y1=\"45\" x2=\"70\" y2=\"165\" />\n",
+       "  <line x1=\"70\" y1=\"45\" x2=\"70\" y2=\"165\" />\n",
+       "  <line x1=\"71\" y1=\"45\" x2=\"71\" y2=\"165\" />\n",
+       "  <line x1=\"72\" y1=\"45\" x2=\"72\" y2=\"165\" />\n",
+       "  <line x1=\"72\" y1=\"45\" x2=\"72\" y2=\"165\" />\n",
+       "  <line x1=\"73\" y1=\"45\" x2=\"73\" y2=\"165\" />\n",
+       "  <line x1=\"73\" y1=\"45\" x2=\"73\" y2=\"165\" />\n",
+       "  <line x1=\"74\" y1=\"45\" x2=\"74\" y2=\"165\" />\n",
+       "  <line x1=\"75\" y1=\"45\" x2=\"75\" y2=\"165\" />\n",
+       "  <line x1=\"75\" y1=\"45\" x2=\"75\" y2=\"165\" />\n",
+       "  <line x1=\"76\" y1=\"45\" x2=\"76\" y2=\"165\" />\n",
+       "  <line x1=\"76\" y1=\"45\" x2=\"76\" y2=\"165\" />\n",
+       "  <line x1=\"77\" y1=\"45\" x2=\"77\" y2=\"165\" />\n",
+       "  <line x1=\"77\" y1=\"45\" x2=\"77\" y2=\"165\" />\n",
+       "  <line x1=\"78\" y1=\"45\" x2=\"78\" y2=\"165\" />\n",
+       "  <line x1=\"79\" y1=\"45\" x2=\"79\" y2=\"165\" />\n",
+       "  <line x1=\"79\" y1=\"45\" x2=\"79\" y2=\"165\" />\n",
+       "  <line x1=\"80\" y1=\"45\" x2=\"80\" y2=\"165\" />\n",
+       "  <line x1=\"80\" y1=\"45\" x2=\"80\" y2=\"165\" />\n",
+       "  <line x1=\"81\" y1=\"45\" x2=\"81\" y2=\"165\" />\n",
+       "  <line x1=\"82\" y1=\"45\" x2=\"82\" y2=\"165\" />\n",
+       "  <line x1=\"82\" y1=\"45\" x2=\"82\" y2=\"165\" />\n",
+       "  <line x1=\"83\" y1=\"45\" x2=\"83\" y2=\"165\" />\n",
+       "  <line x1=\"83\" y1=\"45\" x2=\"83\" y2=\"165\" />\n",
+       "  <line x1=\"84\" y1=\"45\" x2=\"84\" y2=\"165\" />\n",
+       "  <line x1=\"85\" y1=\"45\" x2=\"85\" y2=\"165\" />\n",
+       "  <line x1=\"85\" y1=\"45\" x2=\"85\" y2=\"165\" />\n",
+       "  <line x1=\"86\" y1=\"45\" x2=\"86\" y2=\"165\" />\n",
+       "  <line x1=\"86\" y1=\"45\" x2=\"86\" y2=\"165\" />\n",
+       "  <line x1=\"87\" y1=\"45\" x2=\"87\" y2=\"165\" />\n",
+       "  <line x1=\"88\" y1=\"45\" x2=\"88\" y2=\"165\" />\n",
+       "  <line x1=\"88\" y1=\"45\" x2=\"88\" y2=\"165\" />\n",
+       "  <line x1=\"89\" y1=\"45\" x2=\"89\" y2=\"165\" />\n",
+       "  <line x1=\"89\" y1=\"45\" x2=\"89\" y2=\"165\" />\n",
+       "  <line x1=\"90\" y1=\"45\" x2=\"90\" y2=\"165\" />\n",
+       "  <line x1=\"90\" y1=\"45\" x2=\"90\" y2=\"165\" />\n",
+       "  <line x1=\"91\" y1=\"45\" x2=\"91\" y2=\"165\" />\n",
+       "  <line x1=\"92\" y1=\"45\" x2=\"92\" y2=\"165\" />\n",
+       "  <line x1=\"92\" y1=\"45\" x2=\"92\" y2=\"165\" />\n",
+       "  <line x1=\"93\" y1=\"45\" x2=\"93\" y2=\"165\" />\n",
+       "  <line x1=\"93\" y1=\"45\" x2=\"93\" y2=\"165\" />\n",
+       "  <line x1=\"94\" y1=\"45\" x2=\"94\" y2=\"165\" />\n",
+       "  <line x1=\"95\" y1=\"45\" x2=\"95\" y2=\"165\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"55.556946,45.556946 95.085064,45.556946 95.085064,165.556946 55.556946,165.556946\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Text -->\n",
+       "  <text x=\"75.321005\" y=\"185.556946\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >67</text>\n",
+       "  <text x=\"115.085064\" y=\"105.556946\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,115.085064,105.556946)\">564</text>\n",
+       "  <text x=\"22.778473\" y=\"162.778473\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(45,22.778473,162.778473)\">364</text>\n",
+       "</svg>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "dask.array<stack, shape=(364, 564, 67), dtype=float64, chunksize=(364, 564, 1), chunktype=numpy.ndarray>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "imstack = da.stack(ims, axis=2)\n",
+    "display(imstack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save as an animated GIF `output.gif`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imstacku8 = (imstack / imstack.max() * 255).astype(np.uint8)\n",
+    "imageio.mimsave('output.gif', (imstacku8[:, :, n] for n in range(imstacku8.shape[2])), fps=9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"./output.gif\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='./output.gif')"
    ]
   },
   {
